@@ -140,7 +140,7 @@
                             <div class="os-version">
                                 <h4>Other distros</h4>
                                 <ul>
-                                    <li><a href="https://github.com/olav-st/screencloud/releases/download/v1.5.1/ScreenCloud-v1.5.1-x86_64.AppImage" class="official-dl">AppImage (Portable)</a></li>
+                                    <li><a href="https://github.com/olav-st/screencloud/releases/download/v1.5.2/ScreenCloud-v1.5.2-x86_64.AppImage" class="official-dl">AppImage (Portable)</a></li>
                                     <li><a href="https://sourceforge.net/projects/screencloud/files/" class="official-dl">Mirror</a></li>
                                 </ul>
                             </div>
@@ -152,7 +152,7 @@
                             <div class="os-version">
                                 <h4>&nbsp;</h4>
                                 <ul>
-                                    <li><a href="https://github.com/olav-st/screencloud/releases/download/v1.5.1/ScreenCloud-1.5.1-x86.msi" class="official-dl">Windows Vista/7/8/10</a></li>
+                                    <li><a href="https://github.com/olav-st/screencloud/releases/download/v1.5.2/ScreenCloud-1.5.2-x86.msi" class="official-dl">Windows Vista/7/8/10</a></li>
                                     <li><a href="https://sourceforge.net/projects/screencloud/files/" class="official-dl">Mirror</a></li>
                                 </ul>
                             </div>
@@ -164,7 +164,7 @@
                             <div class="os-version">
                                 <h4>&nbsp;</h4>
                                 <ul>
-                                    <li><a href="https://github.com/olav-st/screencloud/releases/download/v1.5.1/ScreenCloud-v1.5.1.dmg" class="official-dl">OS X 10.6+</a></li>
+                                    <li><a href="https://github.com/olav-st/screencloud/releases/download/v1.5.2/ScreenCloud-v1.5.2.dmg" class="official-dl">OS X 10.6+</a></li>
                                     <li><a href="https://sourceforge.net/projects/screencloud/files/" class="official-dl">Mirror</a></li>
                                 </ul>
                             </div>
